# first-rs

./: .gitignore  cargo.toml  thoughts.md
.github/workflows/: rust.yml
engine/: Cargo.toml
engine-sdk/: Cargo.toml
engine-sdk/src/: camera.rs  color.rs  context.rs  engine.rs  game.rs  lib.rs  scene.rs  sprite.rs
engine/shaders/: shader.wgsl
engine/src/: camerauniform.rs  canvas.rs  context.rs  diagnostics.rs  engine.rs  game.rs  graphics.rs  hot_reloader.rs  input.rs  lib.rs  load.rs  model.rs  render.rs  sdk.rs  shader.wgsl  texture.rs  vertex.rs
engine/src/canvas/: canvas.rs  mod.rs
engine/src/scene_renderer/: mod.rs  scene_renderer.rs  shader.wgsl
engine_editor/: Cargo.toml
engine_editor/src/: camera.rs  editor.rs  editor_native.rs  lib.rs  sdk.rs  tool.rs
engine_sdk/: Cargo.toml
engine_sdk/src/: atlas.rs  camera.rs  color.rs  components.rs  components_copy.rs  copy_components.rs  copy_secondary_map.rs  copy_slot_map.rs  csdunsafecell.rs  editor.rs  engine.rs  entities.rs  event.rs  game.rs  grid.rs  lib.rs  map.rs  pic.rs  rect.rs  scene.rs  spatial_grid.rs  spatial_hashmap.rs  sprite.rs  texture_atlas.rs  texture_info.rs  thing.rs  tile.rs  timer.rs  world.rs  worldy.rs
engine_sdk/src/components/: mod.rs  sound_emitter.rs  sprite.rs
engine_sdk/src/math/: mod.rs  smoothstep.rs
engine_sdk/src/singletons/: mod.rs  tilemap.rs
game/: Cargo.toml
game/src/: lib.rs  main.rs
main/: Cargo.toml  index.html
main-web/: Cargo.toml  index.html
main-web/src/: main.rs
main/src/: main.rs
piggy/: Cargo.toml
piggy/assets/maps/: 001.map  002.map  003.map  004.map  test.map
piggy/src/: campaign.rs  defs.rs  facade.rs  global.rs  lib.rs  piggy.rs  piggy_game.rs  signal.rs  state.rs  world_ext.rs
piggy/src/components/: activator.rs  decoration.rs  door.rs  effector.rs  emit_sound.rs  event.rs  expire.rs  health.rs  item.rs  mob.rs  mod.rs  modifiers.rs  player.rs  trap.rs
piggy/src/listeners/: mod.rs  on_start.rs  start_system.rs
piggy/src/signals/: mod.rs
piggy/src/singletons/: campaign.rs  game_state.rs  global.rs  local.rs  mod.rs  timemachine.rs
piggy/src/systems/: activator_system.rs  cleanup_events.rs  cleanup_system.rs  diagnostics.rs  door_opening.rs  door_system.rs  effector_system.rs  event_system.rs  events_cleanup.rs  events_process.rs  expiring.rs  flash_system.rs  init.rs  init_system.rs  item_pickup.rs  item_system.rs  mob_system.rs  mod.rs  modifiers_update.rs  on_start.rs  physics_system.rs  player_system.rs  process_events.rs  proximity_system.rs  render_flash_system.rs  render_system.rs  render_world_system.rs  sound_playback.rs  spawn_system.rs  start.rs  start_system.rs  time_machine.rs  trapping.rs  ui_system.rs
