[package]
name = "engine"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
wgpu = "0.14.2"
engine-sdk = { path = "../engine-sdk" }
bytemuck = {version = "1.12.3", features = ["derive"]}
