[package]
name = "engine"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.20.1", features = [], default-features = false}
egui-wgpu = {version = "0.20.0"}
egui-winit = {version = "0.20.1", default-features = false}
winit = "0.27.5"
engine_sdk = { path = "../engine_sdk" }
bytemuck = {version = "1.12.3", features = ["derive"]}
lyon = "1.0.1"
wgpu_glyph = "0.18.0"
log = "0.4.17"
instant = "0.1.12"
anyhow = "1.0.68"
engine_editor = {path = "../engine_editor"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "0.14.2"
libloading = "0.7.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wgpu = { version = "0.14", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Clipboard",
    "ClipboardEvent"
]}
#wasm-bindgen = "0.2"
#wasm-bindgen-futures = "0.4.30"
#web-sys = { version = "0.3", features = [
#    "Document",
#    "Window",
#    "Element",
#]}