[package]
name = "engine_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["rlib"]

[dependencies]
engine_sdk = { path = "../engine_sdk" }
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.3"
serde_json = "1.0.91"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6.3"