[package]
name = "engine_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = {version = "0.20.1"}
glam = {version = "0.22.0", features = ["serde"]}
image = "0.24.5"
serde = { version = "1.0", features = ["derive"] }
winit = { version = "0.27.5", default-features = false }
slotmap = { version = "1.0", features = ["serde"] }
parry2d = "0.10.0"
flat_spatial = "0.5.0"