[package]
name = "main"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
engine = {path = "../engine"}
engine_editor = {path = "../engine_editor"}
log = "0.4.17"
winit = "0.27.5"
piggy = { path = "../piggy" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.5"
env_logger = "0.10.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2"